# Godot-Dualsense

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  build_profile.json
demo/: ds_manager.gd  ds_manager.gd.uid  dual_sense_manager.gd.uid  dual_sense_manager.tscn  dual_sense_manager_new.gd  dual_sense_manager_new.gd.uid  icon.svg.import  node_3d.tscn  project.godot
src/: register_types.cpp  register_types.h
src/Private/API/: GamepadDefs.cpp
src/Private/Managers/: DualSenseManager.cpp
src/Public/API/: GamepadDefs.h
src/Public/Adapter/: GodotDeviceRegistry.h  GodotRegistryPolicy.h
src/Public/Managers/: DualSenseManager.h
